# pdfserver

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  vite.config.js
app/: app.py  main.py
app/api/: endpoints.py
app/config/: config.confidential.pdf.yaml
app/middleware/: LoggingMiddleware.py
app/models/: color.py  confidentialpdf.py  fontstyle.py  signature.py  watermark.py
app/public/css/: app.css  app.css.map  bulma-custom.css  bulma-custom.css.map
app/public/shoelace/: shoelace.css  shoelace.js
app/services/: show_credential_pdf.py
app/templates/layouts/: base.jinja
app/templates/macro/: macros.jinja
app/templates/pages/: home.jinja
app/utils/: check_signature.py  create_macro.py  create_signature.py  create_watermark.py  merge_pdf.py  resolve_font_name.py
app/web/: views.py
resources/: main.js  s-markdown.js  s-page.js
resources/pligins/: markdown-block-in-list.js
resources/scss/app/: _index.scss  colors.scss  core.scss  font.scss
resources/scss/bulma/: bulma-custom.scss  custom-variables.scss
tests/: add_file.txt  create.txt  create_folder.txt  create_sample.py  create_watermark.py  delete_file.txt  delete_folder.txt  delete_folder_id.txt  delete_target.txt  get_property.txt  get_root.txt  move_file.txt  move_folder.txt  process_pdfs.py  rename_file.txt  rename_folder.txt  search_folder.txt  store_file.txt  test.py  view_folder.txt
